--- a/signin.html
+++ b/signin.html
@@ -25,7 +25,7 @@
 
                     <button type="submit">Sign In</button>
                 </form>
-                <p>Don't have an account? <a href="#">Sign Up</a></p>
+                <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
             </div>
         </section>
     </main>
