--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <li><a href="model.html">Models</a></li>
             <li><a href="review.html">Review</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="order.html">My Order</a></li>
+            <li><a href="cart.html">My Cart</a></li>
             <li><a href="signin.html">Sign In</a></li>
         </ul>
     </div>
@@ -32,7 +33,9 @@
     <h2>Find Your Dream Car</h2>
     <h1>All at affordable prices</h1>
     <p>There's something for everyone...</p>
+    <a href="model.html">
     <button>Shop Now</button>
+</a>
 </section>
 <p class="feature-text">All the latest models</p> 
 <section id="feature" class="section-p1">
@@ -53,7 +56,7 @@
     <div class="banner-content">
         <h2>Discover Our Exclusive Offers</h2>
         <p>Find the latest models with unbeatable deals. Your dream car is just a click away.</p>
-        <a href="#models" class="banner-btn">Shop Now</a>
+        <a href="model.html" class="banner-btn">Shop Now</a>
     </div>
 </section>
 <section id="newsletter" class="section-p1" >
@@ -76,7 +79,7 @@
     </div>
     <div class="col">
         <h4>My About</h4>
-        <a href="#">About Us</a>
+        <a href="about.html">About Us</a>
         <a href="#">Purchasing Information</a>
         <a href="#">Privacy Policy</a>
         <a href="#">Terms & Conditions</a>
@@ -86,8 +89,8 @@
     <div class="col">
         <h4>My Account</h4>
         <a href="signin.html">Sign In
-        <a href="#">View Model</a>
-        <a href="#">Track My Order</a>
+        <a href="model.html">View Model</a>
+        <a href="order.html">Track My Order</a>
         <a href="#">Help</a>
     </div>
 
