--- a/signin.html
+++ b/signin.html
@@ -31,7 +31,7 @@
     </main>
 
     <footer>
-        <!-- Add footer content here -->
+        <p><a href="index.html">Go back.</a></p>
     </footer>
 </body>
 </html>
